# data_science_project

data_science_ecommerce/: pyproject.toml
data_science_ecommerce/src/: analysis_demand_interval.py  main.py  main_analysis.ipynb
data_science_ecommerce/src/analysis/: analysis.ipynb  analysis_demand_cv2.ipynb  analysis_demand_cv2.py  analysis_demand_interval.ipynb  analysis_sales_rate.ipynb  analysis_sales_rate.py  main_analysis.ipynb
data_science_ecommerce/src/data/features/: demand_type.csv
data_science_ecommerce/src/data/processed/: online_retail_1_processed.csv  online_retail_2_processed.csv
data_science_ecommerce/src/data/raw/: dates_100k.csv  dates_advanced_25k.csv  test_dates.csv  train_dates.csv  val_dates.csv
data_science_ecommerce/src/mlflow/: train.py  train_lightgbm.py
data_science_ecommerce/src/models/: .gitignore
data_science_ecommerce/src/mvc/: schema.py
data_science_ecommerce/src/notebooks/: analysis.ipynb  const.py  main_analysis.ipynb  reading.ipynb
data_science_ecommerce/src/notebooks/EDA/: eda_online_retai.ipynb  eda_online_retail_1.ipynb
data_science_ecommerce/src/notebooks/exploratory/: analysis.ipynb  fearuring.ipynb  main_analysis.ipynb  preprocessing.ipynb  reading.ipynb  test.ipynb
data_science_ecommerce/src/notebooks/modeling/: date_detect.ipynb  sba.ipynb
data_science_ecommerce/src/utils/: crud.py  date_caculator.py  generate_dataset.py  path_converter.py
mlruns/0/: meta.yaml
mlruns/987173263464640132/: meta.yaml
mlruns/987173263464640132/5c93eb665d64405db40ad8c8546b7f4d/: meta.yaml
mlruns/987173263464640132/5c93eb665d64405db40ad8c8546b7f4d/metrics/: acc_interval_within_5d  acc_qty_within_50pct  mae_interval_days  mae_qty  rmse_interval_days  rmse_qty
mlruns/987173263464640132/5c93eb665d64405db40ad8c8546b7f4d/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/987173263464640132/6945d42a1be74bc58d3c28fe7545faec/: meta.yaml
ui/: package-lock.json  package.json
ui/app/: layout.tsx  page.tsx  providers.tsx
ui/app/detail/: page.tsx
ui/services/: api.ts  file.ts
ui/shares/: constants.ts
ui/tanstack/: file.ts
(+48 files in other folders)
