[project]
name = "data-science-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "tnam",email = "nam2005mns08@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
