[project]
name = "data-science-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "tnam",email = "nam2005mns08@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "stable-baselines3 (>=2.7.0,<3.0.0)",
    "gymnasium (>=1.2.2,<2.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "transformers (==4.57.1)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "boto3 (>=1.41.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "regex (>=2025.11.3,<2026.0.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
